sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:17: error: not found: value i
      if (plusPetit(i, i+1)) {
                    ^AlgCocktailSort1:17: error: not found: value i
      if (plusPetit(i, i+1)) {
                       ^AlgCocktailSort1:19: error: not found: value i
        echange(i, i+1)
                ^AlgCocktailSort1:19: error: not found: value i
        echange(i, i+1)
                   ^