sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.code
def cocktailSort() {
  
  var swapped:Boolean = true
  while (swapped) {
    swapped = false
    for (i <- 0 to getNombreValeurs()-2) {
      
     if (plusPetit(i, i+1) == false) {
       
       echange(i, i+1)
       swapped = true      
     }  
    }
    for (j <- getNombreValeurs()-2 to 0 by -1) {
      
      if (plusPetit(i, i+1)) {
        
        echange(i, i+1)
        swapped = true  
      }  
    } 
  } 
}